--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "sever.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon --exec ./node_modules/.bin/babel-node src/sever.js"
+        "start": "nodemon --exec babel-node src/sever.js"
     },
     "keywords": [
         "fullstack",
@@ -27,7 +27,9 @@
         "moment": "^2.29.4",
         "mysql2": "^2.2.5",
         "nodemailer": "^6.7.7",
-        "sequelize": "^6.21.0",
+        "pg": "8.7.1",
+        "pg-hstore": "2.3.4",
+        "sequelize": "^6.6.2",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
